Fixed loader and footeron mobile

--- a/src/app/features/events/event-list-loading/event-list-loading.component.scss
+++ b/src/app/features/events/event-list-loading/event-list-loading.component.scss
@@ -1,11 +1,10 @@
 .skeleton-card {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     gap: 2rem;
-    width: 100%;
+    justify-content: center;
 }
 
 .skeleton-card-content {
-    flex: 1;
-    width: auto;
+    flex: 1 40%;
 }
